<resources>
    <string name="app_name">lab05lifecycle</string>
    <string name="oncreate">onCreate:</string>
    <string name="onstart">onStart</string>
    <string name="onresume">onResume</string>
    <string name="onpause">onPause</string>
    <string name="onstop">onStop</string>
    <string name="onrestart">onRestart</string>
    <string name="ondestroy">onDestroy</string>
    <string name="current">Current:</string>
</resources>